--- a/mmy-first-project/my-blog.html
+++ b/mmy-first-project/my-blog.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
+  <link rel="stylesheet" href="css/styles.css">
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
-
-<body
-  style="color:blueviolet ;text-align: center;background-color:black;">
+<body>
+  
+</body>
+</html>
   <h1>THE BEST TEAM IN THE WORLD</h1> 
   <ol>
     <li><br>
@@ -24,7 +25,7 @@
     </li>
     <li><br>
       <img src="https://i.ytimg.com/vi/b74hnxmYkHw/maxresdefault.jpg" alt="">
-      <h3><ul> The upcoming game against tottenham hotspur will be an intruiging one. The odds faviur city,but in this kind
+      <h3><ul> The upcoming game against tottenham hotspur will be an intruiging one. The odds favour city,but in this kind
         of fixtures anything can happen. With the history between them, tottenham have a higher percentage of winning
         the game.
       </h3></ul>
